--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -7,3 +7,30 @@
 .cabecalhoPrincipal-nav {
 	display: flex;
 }
+
+.rodapePrincipal-patrocinadores .container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.rodapePrincipal-patrocinadores-list {
+	display: flex;
+	align-items: center;
+	width: 70%;
+	margin right: 5%;
+	justify-content: space-around;
+}
+
+.rodapePrincipal-contatoForm{
+	width: 25%;
+}
+
+.rodapePrincipal-contatoForm-fieldset {
+	display: flex;
+}
+
+.rodapePrincipal-navMap-list {
+	display: flex;
+	flex-flow: column wrap;
+	height: 250px;
+}
