--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -49,3 +49,77 @@
 .conteudoPrincipal-cursos-link:nth-child(4n + 1) {
 	margin-left: 0;
 }
+
+.videoSobre .container{
+	display: flex;
+}
+.videoSobre-video{
+	flex-grow: 1;
+}
+.videoSobre-sobre {
+    text-align: center;
+    display: flex;
+    flex-direction: column; 
+    flex-grow: 2;
+}
+.videoSobre-sobre-list{
+	flex-grow: 1;
+}
+
+
+/*Mobile*/
+
+@media only screen and (max-width: 768px) {
+	.cabecalhoPrincipal-nav{
+		flex-direction: column;
+
+	}
+	.cabecalhoPrincipal .container  { 
+		flex-direction: column;
+		align-items: initial;
+		text-align: center;
+	}
+
+	.conteudoPrincipal-cursos{
+		flex direction: column;
+	}
+
+	.conteudoPrincipal-cursos-link{
+		width: 100%;
+	}
+	.conteudoPrincipal-cursos{
+
+	}
+	
+	.rodapePrincipal-navMap-list {
+		height: auto;
+	}
+	.rodapePrincipal-patrocinadores .container{
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.rodapePrincipal-contatoForm{
+		width: 100%;
+	}
+	.rodapePrincipal-patrocinadores-list{
+		width: 100%;
+		margin 0;
+	}
+
+	.rodapePrincipal-contatoForm-fieldset{
+		justify-content: center;
+	}
+
+	.cabecalhoPrincipal-nav-link-app{
+		order: -1;
+	}
+
+	.videoSobre .container{
+		flex-direction: column;
+	}
+	.videoSobre-video{
+		margin: 0 auto;
+	}
+}
+
